# EcoSim

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  TRAINING_STATUS.txt  TRAINING_STATUS_NEW.txt  check_progress.py  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start.ps1  start.sh  test_training_data.csv  training_data_20251227_013723.csv  training_data_20251227_143435.csv  training_data_checkpoint_100.csv  training_data_checkpoint_150.csv  training_data_checkpoint_200.csv  training_data_checkpoint_250.csv  training_data_checkpoint_300.csv  training_data_checkpoint_350.csv  training_data_checkpoint_400.csv  training_data_checkpoint_450.csv  training_data_checkpoint_50.csv  training_data_checkpoint_500.csv
.claude/: settings.local.json
backend/: .gitignore  Dockerfile  HOW_TO_RUN.md  README.md  agents.py  ai.py  audit_digest.py  config.py  economy.py  generate_training_data.py  llm_firm.py  llm_government.py  llm_provider.py  run_all_archetypes.py  run_audit_simulation.py  run_bank_simulation.py  run_behavior_tests.py  run_diagnostic.py  run_firm_tracker.py  run_household_behavior_tests.py  run_household_llm_tester.py  run_large_simulation.py  run_llm_firm_test.py  run_llm_government_test.py  run_tax_comparison.py  server.py  test_firm_behavior.py  test_government_behavior.py  test_household_agent.py  test_stochastic.py  test_training_setup.py  train_ml_model.py
docs/: ARCHITECTURE.md  BANKING_SYSTEM.md  CHANGELOG.md  DATA_ENG_IMPLEMENTATION_ROADMAP.md  DATA_STORAGE_ARCHITECTURE.md  (+11 more)
(+140 files in other folders)
