[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ecosim"
version = "2.0.0"
description = "Agent-based economic simulation with households, firms, and government"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn>=0.41.0",
    "websockets>=16.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "pydantic>=2.0.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
]
ml = [
    "pandas>=2.1.0",
]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests_contracts"]
addopts = "-q --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "llm: marks local LLM and prompt-advisor tests that are still in progress",
    "research: marks exploratory simulation policy checks that are useful but not CI-stable",
]

[tool.flake8]
max-line-length = 120
exclude = [".venv", "node_modules", "__pycache__", ".git"]
ignore = ["E501", "W503", "E203"]
